<resources>
    <string name="app_name">FARM!</string>
    <string name="title_activity_cvsettings">Settings</string>
    <string name="full_name">Full name</string>
    <string name="full_name_key" translatable="false">fullname</string>
    <string name="experience">Experience</string>
    <string name="experience_key" translatable="false">exp</string>
    <string name="education">Education</string>
    <string name="education_key" translatable="false">edu</string>
    <string name="personal_projects">Personal projects</string>
    <string name="personal_projects_key" translatable="false">personalproj</string>
    <string name="skills">Skills</string>
    <string name="skills_key" translatable="false">skills</string>
    <string name="about">About me</string>
    <string name="about_key" translatable="false">about</string>
    <string name="links">Links</string>
    <string name="links_key" translatable="false">links</string>
    <string name="cv_parts">CV Settings</string>
    <string name="new_line">NEW</string>
    <string name="secondary_skills">Secondary skills</string>
    <string name="primary_skills">Primary skills</string>
    <string name="other_skills">Other skills</string>
    <string name="skill">Skill</string>
    <string name="link">Link</string>
    <string name="create_cv">COMPOSE CV</string>
    <string name="save">SAVE</string>
    <string name="open">PREVIEW</string>
    <string name="save_and_open">SAVE AND OPEN</string>
    <string name="choose_folder">FOLDER</string>
    <string name="new_folder">New folder</string>
    <string name="file_path" translatable="false">/storage/emulated/0</string>
    <string name="file_name">File name</string>
    <string name="file_type" translatable="false">.html</string>
    <string name="mime_type" translatable="false">text/html</string>
    <string name="temporary_file_name" translatable="false">temporary_cv</string>
    <string name="null_field">Field is empty</string>
    <string name="null_file">File is not set</string>
    <string name="pdf_render_debug" translatable="false">PDF Rendering</string>
    <string name="pdf_render_null" translatable="false">This field is null.</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please Wait…</string>
    <string name="big_text">Big Text</string>
    <string name="big_text_full">Font size of headers</string>
    <string name="big_text_key" translatable="false">bigtext</string>
    <string name="small_text">Small Text</string>
    <string name="small_text_full">Font size of regular text</string>
    <string name="small_text_key" translatable="false">smalltext</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="center">Center</string>
    <string name="left_key" translatable="false">left</string>
    <string name="right_key" translatable="false">right</string>
    <string name="center_key" translatable="false">center</string>
    <string name="name_position">Name position</string>
    <string name="name_position_key" translatable="false">name_position</string>
    <string name="about_position">About position</string>
    <string name="about_position_key" translatable="false">about_position</string>
    <string name="education_position">Education position</string>
    <string name="education_position_key" translatable="false">education_position</string>
    <string name="experience_position">Experience position</string>
    <string name="experience_position_key" translatable="false">experience_position</string>
    <string name="links_position">Links position</string>
    <string name="links_position_key" translatable="false">links_position</string>
    <string name="projects_position">Projects position</string>
    <string name="projects_position_key" translatable="false">projects_position</string>
    <string name="primary_skills_position">Primary Skills position</string>
    <string name="primary_skills_position_key" translatable="false">primary_skills_position</string>
    <string name="secondary_skills_position">Secondary Skills position</string>
    <string name="secondary_skills_position_key" translatable="false">secondary_skills_position</string>
    <string name="other_skills_position">Other Skills position</string>
    <string name="other_skills_position_key" translatable="false">other_skills_position</string>
    <string name="pdf_headers_size" translatable="false">24</string>
    <string name="pdf_text_size" translatable="false">14</string>
    <string name="used_fields">Used fields</string>
    <string name="font_sizes">Font size</string>
    <string name="text_positioning">Text positioning</string>
</resources>
