<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/experience_key"
        android:title="@string/experience"/>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/education_key"
        android:title="@string/education"/>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/personal_projects_key"
        android:title="@string/personal_projects"/>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/skills_key"
        android:title="@string/skills"/>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/links_key"
        android:title="@string/links"/>

    <EditTextPreference
        android:defaultValue="23"
        android:inputType="number"
        android:key="@string/big_text_key"
        android:title="@string/big_text"
        android:summary="@string/big_text_full"/>

    <EditTextPreference
        android:defaultValue="14"
        android:inputType="number"
        android:key="@string/small_text_key"
        android:title="@string/small_text"
        android:summary="@string/small_text_full"/>

    <ListPreference
        android:key="@string/name_position_key"
        android:title="@string/name_position"
        android:defaultValue="@string/left_key"
        android:entries="@array/gravityentries"
        android:entryValues="@array/gravityvalues"/>

    <ListPreference
        android:key="@string/about_position_key"
        android:title="@string/about_position"
        android:defaultValue="@string/left_key"
        android:entries="@array/gravityentries"
        android:entryValues="@array/gravityvalues"/>

    <ListPreference
        android:key="@string/education_position_key"
        android:title="@string/education_position"
        android:defaultValue="@string/left_key"
        android:entries="@array/gravityentries"
        android:entryValues="@array/gravityvalues"/>

    <ListPreference
        android:key="@string/experience_position_key"
        android:title="@string/experience_position"
        android:defaultValue="@string/left_key"
        android:entries="@array/gravityentries"
        android:entryValues="@array/gravityvalues"/>

    <ListPreference
        android:key="@string/links_position_key"
        android:title="@string/links_position"
        android:defaultValue="@string/left_key"
        android:entries="@array/gravityentries"
        android:entryValues="@array/gravityvalues"/>

    <ListPreference
        android:key="@string/projects_position_key"
        android:title="@string/projects_position"
        android:defaultValue="@string/left_key"
        android:entries="@array/gravityentries"
        android:entryValues="@array/gravityvalues"/>

    <ListPreference
        android:key="@string/primary_skills_position_key"
        android:title="@string/primary_skills_position"
        android:defaultValue="@string/left_key"
        android:entries="@array/gravityentries"
        android:entryValues="@array/gravityvalues"/>

    <ListPreference
        android:key="@string/secondary_skills_position_key"
        android:title="@string/secondary_skills_position"
        android:defaultValue="@string/left_key"
        android:entries="@array/gravityentries"
        android:entryValues="@array/gravityvalues"/>

    <ListPreference
        android:key="@string/other_skills_position_key"
        android:title="@string/other_skills_position"
        android:defaultValue="@string/left_key"
        android:entries="@array/gravityentries"
        android:entryValues="@array/gravityvalues"/>

</PreferenceScreen>