<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_cvready"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="apps.scvh.com.farm.ui.activities.CVReady">


    <EditText
        android:id="@+id/file_name"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:hint="@string/file_name"/>

    <Button
        android:id="@+id/folder"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/file_name"
        android:gravity="end"
        android:text="@string/choose_folder"
        android:layout_alignParentTop="true"/>

    <Button
        android:id="@+id/save"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/file_name"
        android:text="@string/save"/>

    <Button
        android:id="@+id/open"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/file_name"
        android:layout_toEndOf="@+id/save"
        android:text="@string/open"/>

    <Button
        android:id="@+id/save_and_open"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/file_name"
        android:layout_toEndOf="@+id/open"
        android:text="@string/save_and_open"
        />

</RelativeLayout>
