<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_cvinput"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="apps.scvh.com.farm.activities.CVInput">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"/>

            <EditText
                android:id="@+id/experience"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/full_name"
                android:hint="@string/experience"/>

            <Button
                android:id="@+id/create_experience"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/full_name"
                android:layout_below="@+id/experience"
                android:text="@string/new_line"/>

            <Button
                android:id="@+id/create_education"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/education"
                android:layout_below="@+id/education"
                android:text="@string/new_line"/>

            <EditText
                android:id="@+id/project"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/create_education"
                android:hint="@string/personal_projects"/>

            <EditText
                android:id="@+id/education"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/create_experience"
                android:hint="@string/education"
                />

            <Button
                android:id="@+id/create_project"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/full_name"
                android:layout_below="@+id/project"
                android:text="@string/new_line"/>

            <TextView
                android:id="@+id/primary_skill_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/create_project"
                android:text="@string/primary_skills"
                android:textSize="17dp"/>

            <EditText
                android:id="@+id/primary_skill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/primary_skill_textview"
                android:hint="@string/skill"/>

            <Button
                android:id="@+id/create_primary_skill"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/full_name"
                android:layout_below="@+id/primary_skill"
                android:text="@string/new_line"/>

            <TextView
                android:id="@+id/secondary_skill_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/create_primary_skill"
                android:text="@string/secondary_skills"
                android:textSize="17dp"/>

            <EditText
                android:id="@+id/secondary_skill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/secondary_skill_textview"
                android:hint="@string/skill"/>

            <Button
                android:id="@+id/create_secondary_skill"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/full_name"
                android:layout_below="@+id/secondary_skill"
                android:text="@string/new_line"/>

            <TextView
                android:id="@+id/other_skill_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/create_secondary_skill"
                android:text="@string/other_skills"
                android:textSize="17dp"/>

            <EditText
                android:id="@+id/other_skill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/other_skill_textview"
                android:hint="@string/skill"/>

            <Button
                android:id="@+id/create_other_skill"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/full_name"
                android:layout_below="@+id/other_skill"
                android:text="@string/new_line"/>

            <EditText
                android:id="@+id/link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/create_other_skill"
                android:hint="@string/link"/>

            <Button
                android:id="@+id/create_link"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/full_name"
                android:layout_below="@+id/link"
                android:text="@string/new_line"/>

            <EditText
                android:id="@+id/about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/create_link"
                android:hint="@string/about"/>

            <Button
                android:id="@+id/create_cv"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/about"
                android:text="@string/create_cv"/>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
